[package]
name = "bootstrap-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["http2"] }
digest = "0.10.7"
dirs = "5.0.1"
hyper = {version="1.4.1", features=["server"]}
serde = {version="1.0.210",features=["derive"]}
serde_json = "1.0.128"
tokio = {version="1.40.0",features=["full"]}
tower-http = {version="0.6.1",features=["full"]}
