[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = {version="0.6.1",features=["full"]}
hyper-util = { version = "0.1", features = ["full"]}
axum = { version = "0.7.7", features = ["http2","multipart"] }
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
